--- a/docs/units/_unit01/unit01-02.md
+++ b/docs/units/_unit01/unit01-02.md
@@ -1,22 +1,43 @@
 ---
-title: "DP: Questions and work packages"
+title: "W01-1: Hello R, R markdown and GitHub"
 ---
 
-## Guiding questions and workpackages
-Before jumping directly into planning the analysis workflow, take your time and define some questions, hypothesis and/or aims of your study. This is the most important task in data anlysis and modeling since these questions will guide you through your analysis and ensure - if sticked to it - that the resulting information and its discussion will actually match your initial objective.
+This worksheet introduces you to R using R markdown and submitting your assignments to your class repository at GitHub.
 
-Once such questions are at hand, the selection of datasets, methods and models is the next step. This includes
+After completing this worksheet you should have gained some experience in using R markdown and Git.
 
-* the datasets used for the analysis,
-* if necessary the spatial and temporal resolution of the analysis and its spatial and temporal extent, and
-* the models/analysis methods.
+## W01-1: Hello R, R markdown and GitHub
+The following slides (in German) introduce you to the Nature 4.0 project. Nature 4.0 develops a next-generation conservation monitoring through networked sensors as a basis for sustainable biodiversity protection and securing ecosystem functions. In case you miss this session, you find some more information below.
 
-If one has an idea of the above aspects, it is time for a more detailed planing of
+## Things you need for this worksheet
+  * R
+  * R Studio
+  * Git
 
-* the necessary pre-processing of the datasets and
-* the actual analysis workflow.
- 
-## Group discussion prompt
-*Please discuss the overall objective of the study with your peers and agree on something between three and five guiding questions. Use these questions to collaboratively define and graphically illustrate an analysis workflow.*
+##Learning log assignment
+If this is the first time that you use your Git repository provided by LogMOC, the learning log space of Marburg Open Courseware on GitHub, you have to get yourself a GitHub account and use the link provided by the course lecturers afterwards in order to create your personal repository.
+If not done yet, please create your personal learning log repository using the link provided by the course lecturers and clone it to your local computer.
 
-{% include e01-02.md %}
+Please create the following folder structure in your GitHub checkout: ''data_analysis/da-ws-01-1''. 
+
+Please note that ''da-ws-01-1'' is a sub-folder of ''data_analysis'' which in turn is a sub-folder of your main repository folder (i.e. ''msc-phygeo-class-of--''). Do not use any spaces within your folder or filenames. Never.
+
+Now it's time for your first R code which will be put into an R markdown document.
+
+Please write an R script (as an Rmd file with html output) for the following task and commit it to your GitHub-based learning log:
+  * Assign the value of 2 to a variable called ''a'' and the value of 5 to a variable called ''b''.
+  * Compute the sum, difference, product and ratio of a and b (a always in the first place) and store the results to four different variables called ''r1'', ''r2'', ''r3'', and ''r4''.
+  * Create a vector ''v1'' which contains the values stored within the four variables from step 2.
+  * Add a fifth entry to vector ''v1'' which represents ''a'' by the power of ''b'' (i.e. ''a**b'').
+  * Show the content of vector ''v1'' (e.g. use the ''print'' function or just type the variable name in a separate row).
+  * Create a second vector ''v2'' which contains information on the type of mathematical operation used to derive the five results. Hence this vector should have five entries of values "sum", "difference",...
+  * Show the content of vector ''v2''.
+  * Combine the two vectors ''v1'' and ''v2'' into a data frame called ''df''. Each vector should become one column of the data frame so you will end up with a data frame having 5 rows and 2 columns.
+  * Make sure that the column with the data of ''v1'' is named "Results" and ''v2'' is named "Operation".
+  * Show the entire content of ''df''.
+  * Show just the entry of the 3 row and 1 column.
+
+Knitr your Rmd file, update (i.e. commit) it in your local repository and publish (i.e. push) it to the GitHub classroom. Make sure that the created html file is also part of your git repository.
+Create a Rmd file for html output and use ''da-ws-01-1'' (i.e. the worksheet shortname) also for the title and the filename. Store it in the ''da-ws-01-1'' folder just created. You can commit/push as many versions as you like during your work but once you have reached your final version, please use "Final version" as comment for the commit.
+
+Please also make sure that the //knitred// html file is actually put into version control, i.e. it has to show up not only in your local repository folder but also on your GitHub master branch. If it won't show up on GitHub, it is likely that ''.html'' is part of a ''.gitignore'' file in your repository. For a quick'n'dirty solution, just delete that file if it shows up until you are more familiar with Git.
