--- a/docs/units/_unit01/unit01-01.md
+++ b/docs/units/_unit01/unit01-01.md
@@ -1,22 +1,14 @@
 ---
-title: Remote Sensing in Environmental Research and Conservation
+title: First things first
 ---
 
-This unit examines the role of remote sensing in environmental research and nature conservation by introducing the concept of the Nature 4.0 project. The course activities will take place within *Marburg Open Forest*, the forest are of Marburg University which provides an open space for research and education.
+In this session we make a brute force introduction to R, R markdown, the R Studio IDE, version management with Git and GitHub's classroom functionality. While - from a learning theory point of view - this does not really represent anything but a worst case example, R markdown and GitHub are the two things one needs to know to submit the required learning assignments. Hence, let's just do it and then start all over again in the next session.
 
-## Nature 4.0 | Sensing Biodiversity
-The following video introduces you to the Nature 4.0 project. Nature 4.0 develops a next-generation conservation monitoring through networked sensors as a basis for sustainable biodiversity protection and securing ecosystem functions.
+## Learning objectives
+At the end of this session you should be able to
+  * tell the difference between an R and an R markdown script
+  * create a new R markdown script and compile it
+  * sign in to the class assignment of this course at GitHub and clone and push your course repository between the GitHub server and your local computer
+  * put an R markdown (or any other) file into your Git repository, commit it locally and push it to the server
 
-{% include media url="https://docs.google.com/presentation/d/e/2PACX-1vTMmIbf1vF_0WftdI1mMyPYHJCQwalqLSzYrwPQbkeHoO_xTGE2d3BiFlbDDTryFc085PHh0J9bnz9U/embed?start=false&loop=false&delayms=3000" %}
-
-
-## Marburg Open Forest
-The forest of Marburg University is located southeast of Caldern. The activities of this course will focus on the area west of L 3092 where the peak from "Hungert" is located. 
-
-<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=8.641090393066408%2C50.800890076749255%2C8.784427642822267%2C50.85694727337784&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=14/50.8289/8.7128" target="_blank">View Larger Map</a></small>
-
-To get a little more into the Marburg Open Forest mood, enjoy looking through some impressions.
-
-{% include gallerycollection caption = "Impressions from Marburg Open Forest."%}
-
-
+{% include pdf pdf="MOER-MSC-RS Slides 01 - Nature40.pdf" %}
