Add unit 01 and adjust for OER

--- a/docs/units/_unit01/unit01-02.md
+++ b/docs/units/_unit01/unit01-02.md
@@ -1,43 +1,20 @@
 ---
-title: "W01-1: Hello R, R markdown and GitHub"
+title: Git and GitHub
 ---
 
-This worksheet introduces you to R using R markdown and submitting your assignments to your class repository at GitHub.
+To start with a clarification: Git is the version control system you will use in this course (and which is used by millions of other developers.) With Git you will manage something called repository which is the place where you manage your software project (i.e. a folder on your hard disk per project). GitHub is an online software development platform which provides online hosted versions of your local Git repositories and much more collaborative functionality. 
 
-After completing this worksheet you should have gained some experience in using R markdown and Git.
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/noZnOSpcjYY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-## W01-1: Hello R, R markdown and GitHub
-The following slides (in German) introduce you to the Nature 4.0 project. Nature 4.0 develops a next-generation conservation monitoring through networked sensors as a basis for sustainable biodiversity protection and securing ecosystem functions. In case you miss this session, you find some more information below.
+After this kind of advertisement, let's listen to a more sober introduction to distributed version systems.
 
-## Things you need for this worksheet
-  * R
-  * R Studio
-  * Git
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FyfwLX4HAxM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-##Learning log assignment
-If this is the first time that you use your Git repository provided by LogMOC, the learning log space of Marburg Open Courseware on GitHub, you have to get yourself a GitHub account and use the link provided by the course lecturers afterwards in order to create your personal repository.
-If not done yet, please create your personal learning log repository using the link provided by the course lecturers and clone it to your local computer.
-
-Please create the following folder structure in your GitHub checkout: ''data_analysis/da-ws-01-1''. 
-
-Please note that ''da-ws-01-1'' is a sub-folder of ''data_analysis'' which in turn is a sub-folder of your main repository folder (i.e. ''msc-phygeo-class-of--''). Do not use any spaces within your folder or filenames. Never.
-
-Now it's time for your first R code which will be put into an R markdown document.
-
-Please write an R script (as an Rmd file with html output) for the following task and commit it to your GitHub-based learning log:
-  * Assign the value of 2 to a variable called ''a'' and the value of 5 to a variable called ''b''.
-  * Compute the sum, difference, product and ratio of a and b (a always in the first place) and store the results to four different variables called ''r1'', ''r2'', ''r3'', and ''r4''.
-  * Create a vector ''v1'' which contains the values stored within the four variables from step 2.
-  * Add a fifth entry to vector ''v1'' which represents ''a'' by the power of ''b'' (i.e. ''a**b'').
-  * Show the content of vector ''v1'' (e.g. use the ''print'' function or just type the variable name in a separate row).
-  * Create a second vector ''v2'' which contains information on the type of mathematical operation used to derive the five results. Hence this vector should have five entries of values "sum", "difference",...
-  * Show the content of vector ''v2''.
-  * Combine the two vectors ''v1'' and ''v2'' into a data frame called ''df''. Each vector should become one column of the data frame so you will end up with a data frame having 5 rows and 2 columns.
-  * Make sure that the column with the data of ''v1'' is named "Results" and ''v2'' is named "Operation".
-  * Show the entire content of ''df''.
-  * Show just the entry of the 3 row and 1 column.
-
-Knitr your Rmd file, update (i.e. commit) it in your local repository and publish (i.e. push) it to the GitHub classroom. Make sure that the created html file is also part of your git repository.
-Create a Rmd file for html output and use ''da-ws-01-1'' (i.e. the worksheet shortname) also for the title and the filename. Store it in the ''da-ws-01-1'' folder just created. You can commit/push as many versions as you like during your work but once you have reached your final version, please use "Final version" as comment for the commit.
-
-Please also make sure that the //knitred// html file is actually put into version control, i.e. it has to show up not only in your local repository folder but also on your GitHub master branch. If it won't show up on GitHub, it is likely that ''.html'' is part of a ''.gitignore'' file in your repository. For a quick'n'dirty solution, just delete that file if it shows up until you are more familiar with Git.
+## More information on Git and GitHub
+To learn more about Git and GitHub, some starting points are
+  * [GitHub Guides provided by GitHub](https://guides.github.com/) which also includes a very comprehensive introduction to [Git](https://guides.github.com/introduction/git-handbook/).
+  * [GitHub youtube channel](https://www.youtube.com/user/GitHubGuides/)
+  * [GitHub learning lab](https://lab.github.com/)
+  
+ 
+If you are more traditional, you could also start with the original [Git getting started guide at git-scm.com](https://git-scm.com/book/en/v2/Getting-Started-About-Version-Control). 
