--- a/docs/units/_unit01/unit01-01.md
+++ b/docs/units/_unit01/unit01-01.md
@@ -2,13 +2,14 @@
 title: First things first
 ---
 
-In this session we make a brute force introduction to R, R markdown, the R Studio IDE, version management with Git and GitHub's classroom functionality. While - from a learning theory point of view - this does not really represent anything but a worst case example, R markdown and GitHub are the two things one needs to know to submit the required learning assignments. Hence, let's just do it and then start all over again in the next session.
+In this session we make a brute force introduction to R, R markdown, the RStudio IDE, version management with Git and GitHub's classroom functionality. While - from a learning theory point of view - this does not really represent anything but a worst case example, these are the things you need to know to solve the upcoming assignment problems and submit your solutions. Hence, let's just do it and then start all over again in the next session.
 
 ## Learning objectives
-At the end of this session you should be able to
-  * tell the difference between an R and an R markdown script
-  * create a new R markdown script and compile it
-  * sign in to the class assignment of this course at GitHub and clone and push your course repository between the GitHub server and your local computer
-  * put an R markdown (or any other) file into your Git repository, commit it locally and push it to the server
+  * Tell the difference between an R and an R markdown script
+  * Create an R and R markdown script and run and compile it respectively
+  * Sign in to the class assignment of this course at GitHub and clone and push your course repository between the GitHub server and your local computer
+  * Put an R markdown (or any other) file into your Git repository, commit it locally and push it to the server
 
-{% include pdf pdf="MOER-MSC-RS Slides 01 - Nature40.pdf" %}
+## Slides
+{% include pdf pdf="MOER-DA Slides 01 - First-things-first.pdf" %}
+
