--- a/staging/examples/rmd/unit01-07_substring.Rmd
+++ b/staging/examples/rmd/unit01-07_substring.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Extracting substrings"
+title: "Examples: Extracting Substrings"
 author: "Thomas Nauss"
 date: "19 Oktober 2017"
 output: 
